<resources>
<!--    <string name="introduce">My Application</string>-->
    <string name="call">call</string>
    <string name="email">email\n</string>
    <string name="app_name">saleh_intro\n</string>
    <string name="name">sssssssssssssssdddddddddddffffffffsaaaaaaa</string>
    <string name="des">sfdjslkdjfsdlkfaljs;dkfdsafjlsadjfklsakdjfa\nsdkfldsajfdasdflskd\njfalsdkflkdsjflkdjsflkdsjfsdflkjsdf</string>
    <string name="go_top">go top</string>
</resources>