<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name_textview"
            android:layout_height="30dp"
            android:layout_width="wrap_content"
            android:layout_marginStart="210dp"
            android:layout_marginTop="90dp"
            android:text="@string/name"
            android:textSize="20sp"
            android:maxLines="1"
            android:maxEms="7"
            />

                <androidx.core.widget.NestedScrollView
                    android:layout_width="400dp"
                    android:layout_height="358dp"
                    android:layout_marginTop="250dp">

                        <TextView
                            android:id="@+id/description_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="345dp"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="40dp"
                            android:background="@drawable/border"
                            android:text="@string/des"
                            android:textSize="20sp" />
                </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/call_button"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="300dp"
            android:layout_marginTop="130dp"
            android:background="#4CAF50"
            android:text="@string/call"
            />

                <Button
                    android:id="@+id/go_top"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="1000dp"
                    android:background="#4CAF50"
                    android:text="@string/go_top" />
                <Button
            android:id="@+id/email_button"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="210dp"
            android:layout_marginTop="130dp"
            android:background="#D6698E"
            android:text="@string/email" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:cropToPadding="false"
            android:visibility="visible"
            android:background="@drawable/circle"
            android:foreground="@drawable/img_960225"
            android:outlineProvider="background"
            tools:visibility="visible" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
</ScrollView>